Fix direction Fix Random CAR disappear

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="js_libs/supermap-libs/iclient9-leaflet.css"/>
     <script type="text/javascript" include="elasticsearch,jq-nicescroll,dtree"
             src="js_libs/third-js-libs/include-trdlibs.js"></script>
-    <script type="text/javascript" src="js_libs/base-libs/require.min.js"></script>
+    <script type="text/javascript" src="js_libs/base-libs/require.js"></script>
     <script src="busi_libs/utils/UrlConfig.js"></script>
 </head>
 <body class="loading">
