--- a/manage.html
+++ b/manage.html
@@ -5,6 +5,7 @@
     <title>仿真文件管理</title>
     <script src="js_libs/third-js-libs/include-trdlibs.js" include="metro.v4,jq-dateTables"
             excepts="leaflet"></script>
+    <script src="busi_libs/utils/UrlConfig.js"></script>
 </head>
 <body class="bg-dark">
 
