--- a/manage.html
+++ b/manage.html
@@ -42,7 +42,7 @@
 </div>
 <div class="pos-absolute w-100 h-100 loading" style="left:0px;top:0px;background-color:#000;opacity:0.5;display: none">
     <div class="pos-absolute pos-center bg-black fg-red" id="loading">
-        <img style="width: 50px;height: 50px" src="images/1352886927_7549.gif"/>正在处理。。。请勿进行其他操作或关闭页面
+        <img style="width: 50px;height: 50px" src="images/1352886927_7549.gif"/><h4 style="opacity:1;font-weight: bold;">正在处理.....请勿进行其他操作或关闭页面</h4>
     </div>
 </div>
 <script src="busi_libs/plugins/ManageSimFile.js"></script>
