--- a/index.html
+++ b/index.html
@@ -91,8 +91,10 @@
         <div><a class="ico"></a><a href="javascript:" id="po">剖面</a></div>
         <div><a href="javascript:" id="cle">清除</a></div>
     </div>
-    <canvas style="position:absolute;right:2%;bottom:2%;background-color:rgba(65, 65, 65, 0.5);display:none"
-            id="pro" height="0" width="0"></canvas>
+    <div id="profile"
+         style="width: 600px;height: 450px;position:absolute;right:2%;bottom:2%;background-color:rgba(65, 65, 65, 0.5);display:none">
+        <canvas style="" id="pro" height="0" width="0"></canvas>
+    </div>
     <!-- 左侧面板 -->
     <div class="left-panel" style="display:none"></div>
 </div>
