change car list to map,add fly plugin

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
             <li><a class="rtop-t05" href="javascript:" title="三维测量"></a></li>
             <li class="home"><a class="rtop-t06" href="javascript:" title="视角重置"></a></li>
             <li class="confScene"><a class="rtop-t07" href="javascript:" title="亮度调整"></a></li>
+            <li class="fly"><a class="rtop-t08" href="javascript:" title="飞行管理"></a></li>
             <li><a class="rtop-t09" id="toolOnOff" href="javascript:" title="收起"></a></li>
         </ul>
     </div>
@@ -100,6 +101,7 @@
         <div><a class="ico"></a><a href="javascript:" id="po">剖面</a></div>
         <div><a href="javascript:" id="cle">清除</a></div>
     </div>
+    <div class="fly-panel"></div>
     <div id="profile"
          style="width: 600px;height: 450px;position:absolute;right:2%;bottom:2%;background-color:rgba(65, 65, 65, 0.5);display:none">
         <canvas style="" id="pro" height="0" width="0"></canvas>
